--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>space</title>
     <href>class:"terra"</href>
+    <p>jogos feito para divertir voces</p>
 </head>
 <body>
     <p>bom dia para todos</p>
-
+ <h6>informação de <strong>games</strong>jogos de</h6>
     
 </body>
 </html>
